build_output_utf8.txt

> luxe-store@0.1.0 build
> next build

node.exe : ΓÜá 
Warning: Next.js 
inferred your 
workspace root, but 
it may not be 
correct.
At line:1 char:1
+ & "C:\Program Files
\nodejs/node.exe" 
"C:\Users\AHMED 
SAFFAR\AppData\R ...
+ ~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (ΓÜá War   
 ning: Ne...not b    
e correct.:Strin    
g) [], RemoteExc    
eption
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
 We detected 
multiple lockfiles 
and selected the 
directory of 
C:\Users\AHMED SAFFAR
\package-lock.json 
as the root 
directory.
 To silence this 
warning, set 
`turbopack.root` in 
your Next.js config, 
or consider removing 
one of the lockfiles 
if it's not needed.
   See https://nextjs
.org/docs/app/api-ref
erence/config/next-co
nfig-js/turbopack#roo
t-directory for more 
information.
 Detected additional 
lockfiles: 
   * C:\Users\AHMED S
AFFAR\.gemini\antigra
vity\scratch\luxe-sto
re\package-lock.json

Γû▓ Next.js 16.1.6 (Turbopack)
- Environments: .env

  Creating an optimized production build ...
Error: Cannot apply 
unknown utility 
class `btn`
    [2m[at 
onInvalidCandidate 
(C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\n
ode_modules\tailwindc
ss\dist\lib.js:21:151
1)][0m
    [2m[at Te 
(C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\n
ode_modules\tailwindc
ss\dist\lib.js:16:363
26)][0m
    [2m[at 
C:\Users\AHMED SAFFAR
\.gemini\antigravity\
scratch\luxe-store\no
de_modules\tailwindcs
s\dist\lib.js:21:355]
[0m
    [2m[at Rr 
(C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\n
ode_modules\tailwindc
ss\dist\lib.js:3:1718
)][0m
    [2m[at _ 
(C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\n
ode_modules\tailwindc
ss\dist\lib.js:3:1377
)][0m
    [2m[at $e 
(C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\n
ode_modules\tailwindc
ss\dist\lib.js:21:172
)][0m
    [2m[at un 
(C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\n
ode_modules\tailwindc
ss\dist\lib.js:38:294
)][0m
    [2m[at async cn 
(C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\n
ode_modules\tailwindc
ss\dist\lib.js:38:631
)][0m
    [2m[at async Xr 
(C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\n
ode_modules\@tailwind
css\node\dist\index.j
s:10:3417)][0m
    [2m[at async I 
(C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\n
ode_modules\@tailwind
css\postcss\dist\inde
x.js:10:3977)][0m

> Build error 
occurred
Error: Turbopack 
build failed with 2 
errors:
./.gemini/antigravity
/scratch/luxe-store/a
pp/globals.css
Error evaluating 
Node.js code
CssSyntaxError: 
tailwindcss: 
C:\Users\AHMED SAFFAR
\.gemini\antigravity\
scratch\luxe-store\ap
p\globals.css:1:1: 
Cannot apply unknown 
utility class `btn`
    at Input.error (.
gemini/antigravity/sc
ratch/luxe-store/node
_modules/postcss/lib/
input.js:135:16) 
[C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\.
next\build\chunks\c53
2c_95038435._.js:4651
:22]
    at Root.error (.g
emini/antigravity/scr
atch/luxe-store/node_
modules/postcss/lib/n
ode.js:146:32) 
[C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\.
next\build\chunks\c53
2c_95038435._.js:928:
38]
    [at Object.Once 
(C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\n
ode_modules\@tailwind
css\postcss\dist\inde
x.js:10:6911)]
    at async 
LazyResult.runAsync (
.gemini/antigravity/s
cratch/luxe-store/nod
e_modules/postcss/lib
/lazy-result.js:293:1
1) [C:\Users\AHMED SA
FFAR\.gemini\antigrav
ity\scratch\luxe-stor
e\.next\build\chunks\
c532c_95038435._.js:6
206:21]
    at async 
transform (turbopack:
///[turbopack-node]/t
ransforms/postcss.ts:
70:34) 
[C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\.
next\build\chunks\[ro
ot-of-the-server]__90
d51eae._.js:146:36]
    at async run (tur
bopack:///[turbopack-
node]/ipc/evaluate.ts
:92:23) 
[C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\.
next\build\chunks\[ro
ot-of-the-server]__2a
07aa37._.js:443:31]

Import trace:
  Client Component 
Browser:
    ./.gemini/antigra
vity/scratch/luxe-sto
re/app/globals.css 
[Client Component 
Browser]
    ./.gemini/antigra
vity/scratch/luxe-sto
re/app/layout.tsx 
[Server Component]


./.gemini/antigravity
/scratch/luxe-store/a
pp/products/page.tsx:
1:10
Ecmascript file had 
an error
[0m[31m[1m>[22m[
39m[90m 1 |[39m 
[36mimport[39m { 
useState[33m,[39m 
useMemo } 
[36mfrom[39m [32m'
react'[39m[33m;[39
m
 [90m   |[39m      
    [31m[1m^[22m[
39m[31m[1m^[22m[3
9m[31m[1m^[22m[39
m[31m[1m^[22m[39m
[31m[1m^[22m[39m
[31m[1m^[22m[39m[
31m[1m^[22m[39m[3
1m[1m^[22m[39m
 [90m 2 |[39m 
[36mimport[39m 
[33mHeader[39m 
[36mfrom[39m [32m'
@/components/Header'
[39m[33m;[39m
 [90m 3 |[39m 
[36mimport[39m 
[33mFooter[39m 
[36mfrom[39m [32m'
@/components/Footer'
[39m[33m;[39m
 [90m 4 |[39m 
[36mimport[39m [33
mProductCard[39m 
[36mfrom[39m [32m'
@/components/ProductC
ard'[39m[33m;[39m
[0m

You're importing a 
component that needs 
`useState`. This 
React Hook only 
works in a Client 
Component. To fix, 
mark the file (or 
its parent) with the 
`"use client"` 
directive.

 Learn more: https://
nextjs.org/docs/app/a
pi-reference/directiv
es/use-client




    at async 
transform (turbopack:
///[turbopack-node]/t
ransforms/postcss.ts:
70:34) 
[C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\.
next\build\chunks\[ro
ot-of-the-server]__90
d51eae._.js:146:36])
    at async run (tur
bopack:///[turbopack-
node]/ipc/evaluate.ts
:92:23) 
[C:\Users\AHMED SAFFA
R\.gemini\antigravity
\scratch\luxe-store\.
next\build\chunks\[ro
ot-of-the-server]__2a
07aa37._.js:443:31])
    at <unknown> (./.
gemini/antigravity/sc
ratch/luxe-store/app/
products/page.tsx:1:1
0)
